--- a/src/sections/other-posts/index.module.scss
+++ b/src/sections/other-posts/index.module.scss
@@ -21,14 +21,14 @@
   gap: 32px;
   justify-content: space-between;
   &_box{
-    width: 214px;
+    width: 45%;
   }
 }
 
 @media (max-width: 1920px) {
   .podcastSection{
     &_box{
-      width: 214px;
+      width: 45%;
     }
   }
 }
@@ -36,7 +36,7 @@
 @media (max-width: 1789px) {
   .podcastSection{
     &_box{
-      width: 175px;
+      width: 45%;
     }
   }
 }
@@ -45,7 +45,7 @@
   .podcastSection{
     gap: 20px;
     &_box{
-      width: 140px;
+      width: 45%;
     }
   }
 }
@@ -53,7 +53,7 @@
 @media (max-width: 1366px) {
   .podcastSection{
     &_box{
-      width: 130px;
+      width: 45%;
     }
   }
 }
