--- a/src/pages/video/detail/index.module.scss
+++ b/src/pages/video/detail/index.module.scss
@@ -48,8 +48,11 @@
   &__feedback {
     font-size: var(--fs-14);
     font-weight: var(--fw-5);
-    color: rgba(0, 0, 0, 0.4);
   }
+}
+
+.report {
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .contentSection,
