--- a/src/pages/podcast/detail/index.module.scss
+++ b/src/pages/podcast/detail/index.module.scss
@@ -18,23 +18,14 @@
     padding: 16px;
     box-shadow: 0 5.3px 85.3px 0 rgb(0 0 0 / 7%);
     height: 192px;
-
-    &__title {
-      font-size: var(--fs-22);
-      font-weight: var(--fw-6);
-    }
-    &__artist {
-      font-size: var(--fs-18);
-      font-weight: var(--fw-5);
-    }
+    display: flex;
+  
     &__text {
       margin-left: 8px;
       font-size: var(--fs-15);
       font-weight: var(--fw-5);
     }
-    &__middle{
-      padding-left: 24px;
-    }
+   
     &__paragraph {
       margin-top: 32px;
       &_p{
@@ -44,11 +35,38 @@
      
     }
 
-    &__image{
+    &__left{
+      width: 17%;
       padding: 0;
       img{
         width: 100%;
       }
+    }
+    &__middle{
+      width: 58%;
+      padding-left: 24px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      &_title {
+        font-size: var(--fs-22);
+        font-weight: var(--fw-6);
+      }
+      &_artist {
+        font-size: var(--fs-18);
+        font-weight: var(--fw-5);
+      }
+      &_tags{
+        button{
+          height: 26px;
+          font-size: 12px !important;
+          line-height: 15px;
+        }
+        
+      }
+    }
+    &__right{
+      width: 25%;
     }
   }
 
@@ -169,19 +187,30 @@
       }
     }
     .podcastSection {
-      height: 174px;
-      &__title {
-        font-size: 19px;
-        font-weight: var(--fw-6);
-      }
-      &__artist {
-        font-size: 16px;
-        font-weight: var(--fw-5);
+      height: 163px;
+      &__middle{
+        &_title {
+          font-size: 19px;
+          font-weight: var(--fw-6);
+        }
+        &_artist {
+          font-size: 16px;
+          font-weight: var(--fw-5);
+        }
+        &_tags{
+          button{
+            height: 26px;
+            font-size: 12px !important;
+            line-height: 15px;
+          }
+          
+        }
       }
       &__text {
-        font-size: 16px;
+        font-size: 12px;
         font-weight: var(--fw-5);
       }
+     
       &__paragraph {
         margin-top: 32px;
         &_p{
@@ -205,17 +234,28 @@
       }
     }
     .podcastSection {
-      height: 132px;
-      &__title {
-        font-size: 19px;
-        font-weight: var(--fw-6);
+      height: 145px;
+      &__middle{
+        &_title {
+          font-size: 18px;
+          font-weight: var(--fw-6);
+        }
+        &_artist {
+          font-size: 16px;
+          font-weight: var(--fw-5);
+        }
+        &_tags{
+          button{
+            height: 26px;
+            font-size: 12px !important;
+            line-height: 15px;
+          }
+          
+        }
       }
-      &__artist {
-        font-size: 16px;
-        font-weight: var(--fw-5);
-      }
+      
       &__text {
-        font-size: 14px;
+        font-size: 11px;
         font-weight: var(--fw-5);
       }
       &__paragraph {
