--- a/src/sections/banner/index.module.scss
+++ b/src/sections/banner/index.module.scss
@@ -34,8 +34,8 @@
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .banner {
-    // max-height: 35rem;
+    display: none;
   }
 }
