--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -1,8 +1,9 @@
 .video {
-  padding: 5.7rem 6rem 18.3rem 5.3rem;
+  padding: 40px 48px;
 
   .image {
     position: relative;
+    height: 800px;
 
     &__item {
       width: 100%;
@@ -12,11 +13,11 @@
       max-height: 63.6rem;
     }
     &__title {
-      font-size: var(--fs-62);
+      font-size: var(--fs-44);
       font-weight: var(--fw-7);
     }
     &__description {
-      font-size: var(--fs-28);
+      font-size: var(--fs-20);
       font-weight: var(--fw-4);
     }
     &__title,
@@ -25,10 +26,10 @@
       color: white;
     }
     .content {
-      padding: 7.6rem;
+      padding: 64px;
       z-index: 10;
       bottom: 0;
-      max-width: 89rem;
+      max-width: 900px;
     }
   }
 }
@@ -40,9 +41,9 @@
 .btn {
   &__item {
     border-radius: unset !important;
-    width: 26rem;
-    height: 6rem;
-    font-size: var(--fs-21) !important;
+    width: 260px;
+    height: 60px;
+    font-size: var(--fs-20) !important;
     font-weight: var(--fw-6) !important;
   }
 }
@@ -57,9 +58,6 @@
 }
 
 .slider {
-  // :global(.swiper-wrapper) {
-  //    padding-bottom: 2.4rem;
-  // }
   :global(.swiper-pagination) {
     padding-top: 24px !important;
     bottom: 0 !important;
@@ -84,20 +82,66 @@
     line-height: 3rem;
   }
 }
+
 .card {
-  height: 36.4rem !important;
-  border: none !important;
-  border-radius: unset !important;
+  position: relative;
+  height: 100%;
+
+  &__img {
+    object-fit: cover;
+    width: 100%;
+    height: 185px;
+  }
+  &__title {
+    position: absolute;
+    left: 5%;
+    bottom: 15%;
+  }
+  &__title,
+  &__item,
+  &__duration {
+    font-size: var(--fs-16);
+    font-weight: var(--fw-6);
+    color: #fff;
+  }
+  &__duration {
+    position: absolute;
+    left: 5%;
+    top: 10%;
+    background-color: #000;
+    border-radius: 20px;
+    padding: 4px 12px;
+  }
+  &__item {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    transform: translate(-30%, -50%);
+    line-height: 24px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -10px;
+      transform: translate(-50%, -50%);
+      width: 8px;
+      height: 8px;
+      background-color: #f05e0c;
+      border-radius: 20px;
+    }
+    &__video {
+      display: none;
+    }
+  }
 
   &__body {
     box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07) !important;
   }
-}
 
-.xx {
-  aspect-ratio: unset;
-  object-fit: cover;
-  height: 18.2rem;
+  .active {
+  }
 }
 
 .title {
@@ -113,22 +157,51 @@
   font-weight: var(--fw-6) !important;
 }
 
-@media (max-width: 1400px) {
+.embedVideo {
+  height: 800px;
+}
+
+@media (max-width: 1789px) {
   .video {
     .image {
       &__title {
-        font-size: var(--fs-50);
-        font-weight: var(--fw-7);
+        font-size: var(--fs-40);
       }
       &__description {
-        font-size: var(--fs-20);
+        font-size: var(--fs-18);
         font-weight: var(--fw-4);
       }
       .content {
-        padding: 5rem;
+        padding: 64px;
         z-index: 10;
         bottom: 0;
-        max-width: 60rem;
+        max-width: 800px;
+      }
+    }
+  }
+
+  .btn {
+    &__item {
+      width: 230px;
+      font-size: var(--fs-18) !important;
+    }
+  }
+}
+
+@media (max-width: 1600px) {
+  .video {
+    .image {
+      &__title {
+        font-size: var(--fs-38);
+      }
+      &__description {
+        font-size: var(--fs-16);
+        font-weight: var(--fw-4);
+      }
+      .content {
+        padding: 64px;
+        z-index: 10;
+        bottom: 0;
       }
     }
   }
@@ -136,28 +209,36 @@
   .btn {
     &__item {
       border-radius: unset;
-      width: 23rem;
-      height: 5rem;
+      width: 190px;
+      height: 45px;
+      font-size: var(--fs-16) !important;
+    }
+  }
+
+  .card {
+    &__title,
+    &__item,
+    &__duration {
+      font-size: var(--fs-14);
+      font-weight: var(--fw-6);
     }
   }
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .video {
-    padding: 3rem 3rem 18.3rem 3rem;
+    padding: 40px 48px;
     .image {
+      height: 600px;
       &__title {
-        font-size: var(--fs-44);
-        font-weight: var(--fw-7);
+        font-size: var(--fs-36);
       }
       &__description {
-        font-size: var(--fs-15);
-        font-weight: var(--fw-4);
+        font-size: var(--fs-14);
       }
-
       .content {
-        max-width: 54rem;
-        padding: 3rem;
+        max-width: 550px;
+        padding: 50px;
       }
     }
   }
@@ -174,8 +255,12 @@
 
   .card {
     max-height: 38.5rem !important;
-    .header {
-      // min-height: 21.9rem !important;
+
+    &__title,
+    &__item,
+    &__duration {
+      font-size: var(--fs-12);
+      font-weight: var(--fw-6);
     }
   }
 
@@ -186,10 +271,14 @@
 
   .btn {
     &__item {
-      border-radius: unset;
-      width: 20rem;
-      height: 4rem;
+      width: 175px;
+      height: 40px;
+      font-size: var(--fs-14) !important;
     }
+  }
+
+  .embedVideo {
+    height: 600px;
   }
 }
 
