--- a/src/pages/blog/index.module.scss
+++ b/src/pages/blog/index.module.scss
@@ -59,6 +59,37 @@
   }
 }
 
+.cardContainer {
+  display: flex;
+  flex: 0 0 auto;
+  width: 25% !important;
+  margin-top: 30px !important;
+}
+
+@media (max-width: 1920px) {
+  .cardContainer {
+    display: flex;
+    flex: 0 0 auto;
+    width: 19.7% !important;
+  }
+}
+
+@media (max-width: 1789px) {
+  .cardContainer {
+    display: flex;
+    flex: 0 0 auto;
+    width: 19.7% !important;
+  }
+}
+
+@media (max-width: 1600px) {
+  .cardContainer {
+    display: flex;
+    flex: 0 0 auto;
+    width: 16.5% !important;
+  }
+}
+
 @media (max-width: 1366px) {
   .footerSection {
     &__genre {
@@ -73,6 +104,12 @@
       font-weight: var(--fw-5);
       line-height: 1.8rem;
     }
+  }
+
+  .cardContainer {
+    display: flex;
+    flex: 0 0 auto;
+    width: 31.5% !important;
   }
 }
 
