--- a/src/pages/blog/index.module.scss
+++ b/src/pages/blog/index.module.scss
@@ -1,5 +1,5 @@
 .blog {
-  padding: 3rem;
+  padding: 40px 48px;
 
   &__header {
     font-size: var(--fs-30);
@@ -86,7 +86,7 @@
   .cardContainer {
     display: flex;
     flex: 0 0 auto;
-    width: 16.5% !important;
+    width: 17.5% !important;
   }
 }
 
