video see all fix

--- a/src/pages/podcast/index.module.scss
+++ b/src/pages/podcast/index.module.scss
@@ -1,5 +1,6 @@
 .podcast {
   padding: 40px 48px;
+  background: #e5e5e5;
   &__header {
     font-size: var(--fs-30);
     font-weight: var(--fw-6);
