--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -140,9 +140,6 @@
   &__body {
     box-shadow: 0px 3.79351px 60.6962px rgba(0, 0, 0, 0.07) !important;
   }
-
-  .active {
-  }
 }
 
 .title {
@@ -187,6 +184,10 @@
       font-size: var(--fs-18) !important;
     }
   }
+
+  .slider {
+    height: 13%;
+  }
 }
 
 @media (max-width: 1600px) {
@@ -224,6 +225,10 @@
       font-weight: var(--fw-6);
     }
   }
+
+  .slider {
+    height: 15%;
+  }
 }
 
 @media (max-width: 1366px) {
@@ -245,6 +250,7 @@
   }
 
   .slider {
+    height: 14%;
     &__header {
       font-size: var(--fs-25);
     }
@@ -280,6 +286,12 @@
 
   .embedVideo {
     height: 600px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .slider {
+    height: 15%;
   }
 }
 
