--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -3,14 +3,16 @@
 
   .image {
     position: relative;
+    width: 100%;
     height: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
 
     &__item {
-      width: 100%;
-      height: 100%;
-      z-index: -1;
       object-fit: cover;
+      z-index: -1;
       max-height: 63.6rem;
+      height: 100%;
     }
     &__title {
       font-size: var(--fs-44);
@@ -92,6 +94,8 @@
     object-fit: cover;
     width: 100%;
     height: 185px;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   &__title {
     position: absolute;
