--- a/src/sections/card/blog/index.module.scss
+++ b/src/sections/card/blog/index.module.scss
@@ -1,6 +1,7 @@
 .card {
   width: 100% !important;
   height: 365.8px !important;
+  border: none !important;
 
   &__header {
     height: 209px !important;
