--- a/src/sections/sliders/index.module.scss
+++ b/src/sections/sliders/index.module.scss
@@ -5,7 +5,7 @@
   :global(.swiper-pagination) {
     bottom: -6px !important;
     text-align: right;
-    background-color: #e5e5e5 !important;
+    background-color: #eeee !important;
     margin-top: 23.5px;
   }
   :global(.swiper-pagination-bullet),
