--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -66,7 +66,7 @@
     padding-top: 24px !important;
     bottom: 0 !important;
     text-align: right;
-    background-color: #e5e5e5 !important;
+    background-color: #eeee !important;
   }
   :global(.swiper-pagination-bullet),
   :global(.swiper-pagination-bullet-active) {
