--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -96,16 +96,20 @@
   color: #8692a6 !important;
 }
 
-.loginIcon {
-  width: 20px;
-  height: 23px;
-}
 .loginBtn {
   display: flex;
   position: relative;
   align-items: center;
-  width: 100%;
+  height: 50px;
 
+  &__icon {
+    position: absolute;
+    left: 5%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 23px;
+  }
   &__google,
   &__apple {
     position: absolute;
@@ -168,9 +172,12 @@
     font-size: var(--fs-15);
   }
 
-  .loginLabel {
-    font-size: var(--fs-14);
-    font-weight: var(--fw-6);
+  .loginBtn {
+    &__google,
+    &__apple {
+      font-size: var(--fs-14);
+      font-weight: var(--fw-6);
+    }
   }
 }
 
